--- a/WebApplication2/Views/Home/Course.cshtml
+++ b/WebApplication2/Views/Home/Course.cshtml
@@ -168,13 +168,29 @@
                                 <hr>
 
 
+
+
+
+
+
+
                                 <!-- BEGIN FILTER BY Rating -->
-                                <p style="margin:3px">
+                      @*           <p style="margin:3px">
                                     <button class="btn btn-light" type="button" data-toggle="collapse" data-target="#rate" aria-expanded="true" aria-controls="rate">
                                         <h4>Rating</h4>
                                     </button>
-                                </p>
-                                <div id="rate" class="collapse" style="margin:4px">
+                                </p> *@
+                            <p>
+                                <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                                    <h4>Rating</h4>
+                                </button>
+                            </p>
+                           @*      <div id="rate" class="collapse" style="margin:4px"> *@
+
+                            <div style="min-height: 10px">
+                                <div class="collapse" id="collapseWidthExample">
+                                    <div class="form-check" style="margin: 10px 0px 10px 0;">
+
                                     <div class="down-content ">
                                         <span class="stars btn">
                                             <i class="fa fa-star"></i>
@@ -208,6 +224,9 @@
                                             <i class="fa fa-star"></i>
                                         </span>
                                     </div>
+                                </div>
+                                </div>
+
                                 </div>
 
                                 <p style="margin:3px">
