--- a/WebApplication2/Views/Student/Review.cshtml
+++ b/WebApplication2/Views/Student/Review.cshtml
@@ -97,6 +97,55 @@
     <head>
 
         <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        .rate {
+            float: left;
+            height: 46px;
+            padding: 0 10px;
+            margin-bottom:10px;
+        }
+
+            .rate:not(:checked) > input {
+                position: absolute;
+                top: -9999px;
+            }
+
+            .rate:not(:checked) > label {
+                float: right;
+                width: 1em;
+                overflow: hidden;
+                white-space: nowrap;
+                cursor: pointer;
+                font-size: 30px;
+                color: #ccc;
+            }
+
+                .rate:not(:checked) > label:before {
+                    content: '★ ';
+                }
+
+            .rate > input:checked ~ label {
+                color: red;
+            }
+
+            .rate:not(:checked) > label:hover,
+            .rate:not(:checked) > label:hover ~ label {
+                color: red;
+            }
+
+            .rate > input:checked + label:hover,
+            .rate > input:checked + label:hover ~ label,
+            .rate > input:checked ~ label:hover,
+            .rate > input:checked ~ label:hover ~ label,
+            .rate > label:hover ~ input:checked ~ label {
+                color: red;
+            }
+
+
         .choices ul.choice {
             
             text-align: left;
@@ -156,10 +205,25 @@
             <div class="contact-form">
                 <form id="contact" method="post" asp-action="review">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-8">
+                            <div class=" align-content-center"style="margin:15px;">
+                                <div class="rate">
+                                    <input type="radio" id="star5" name="rate" value="5" />
+                                    <label for="star5" title="text">5 stars</label>
+                                    <input type="radio" id="star4" name="rate" value="4" />
+                                    <label for="star4" title="text">4 stars</label>
+                                    <input type="radio" id="star3" name="rate" value="3" />
+                                    <label for="star3" title="text">3 stars</label>
+                                    <input type="radio" id="star2" name="rate" value="2" />
+                                    <label for="star2" title="text">2 stars</label>
+                                    <input type="radio" id="star1" name="rate" value="1" />
+                                    <label for="star1" title="text">1 star</label>
+                                </div>
+                            </div>
                             <fieldset>
                                 <textarea name="review" rows="6" class="form-control" id="review" placeholder="Your Review" required=""></textarea>
                             </fieldset>
+                            
                         </div>
                     </div>
 
@@ -313,7 +377,7 @@
 
                             <ul class="choice" style="border:none">
                                 <li> <h5>Ease of language</h5> </li>
-                                <li><a href="#">1</a></li>
+                     @*            <li><a href="#">1</a></li>
                                 <li><a href="#">2</a></li>
                                 <li><a href="#">3</a></li>
                                 <li><a href="#">4</a></li>
@@ -322,14 +386,18 @@
                                 <li><a href="#">7</a></li>
                                 <li><a href="#">8</a></li>
                                 <li><a href="#">9</a></li>
-                                <li><a href="#">10</a></li>
+                                <li><a href="#">10</a></li> *@
+                                @for (int i = 1; i <= 10; i++)
+                                {
+                                    <li><a href="#">@Convert.ToInt16(i)</a></li>
+                                }
 
                             </ul>
 
 
                             <ul class="choice" style="border:none">
                                 <li> <h5>Ease of explaination</h5> </li>
-                                <li><a href="#">1</a></li>
+                       @*          <li><a href="#">1</a></li>
                                 <li><a href="#">2</a></li>
                                 <li><a href="#">3</a></li>
                                 <li><a href="#">4</a></li>
@@ -338,7 +406,33 @@
                                 <li><a href="#">7</a></li>
                                 <li><a href="#">8</a></li>
                                 <li><a href="#">9</a></li>
-                                <li><a href="#">10</a></li>
+                                <li><a href="#">10</a></li> *@
+
+                                @for (int i = 1; i <= 10; i++)
+                                {
+                                    <li><a href="#">@Convert.ToInt16(i)</a></li>
+                                }
+@* 
+                               @for (int i = 1; i <= 10; i++)
+                                {
+                                    <div class="form-check-label">
+                                        <select class="form-check-input">
+
+                                        <option >@Convert.ToInt16(i)</option>
+                                        
+                                    </select>
+                                    </div>
+                                } *@ 
+
+                           @*      @for (int i = 1; i <= 10; i++)
+                                {
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="selectedNumber" id="number@i" value="@i">
+                                        <label class="form-check-label" for="number@i">
+                                            @Convert.ToInt16(i)
+                                        </label>
+                                    </div>
+                                } *@
 
                             </ul>
 
@@ -346,7 +440,7 @@
 
                             <ul class="choice" style="border:none">
                                 <li> <h5>Quality of sound</h5> </li>
-                                <li><a href="#">1</a></li>
+                          @*       <li><a href="#">1</a></li>
                                 <li><a href="#">2</a></li>
                                 <li><a href="#">3</a></li>
                                 <li><a href="#">4</a></li>
@@ -355,14 +449,18 @@
                                 <li><a href="#">7</a></li>
                                 <li><a href="#">8</a></li>
                                 <li><a href="#">9</a></li>
-                                <li><a href="#">10</a></li>
+                                <li><a href="#">10</a></li> *@
+                                @for (int i = 1; i <= 10; i++)
+                                {
+                                    <li><a href="#">@Convert.ToInt16(i)</a></li>
+                                }
 
                             </ul>
 
 
                             <ul class="choice" style="border:none">
                                 <li>  <h5>Practical example</h5> </li>
-                                <li><a href="#">1</a></li>
+                     @*            <li><a href="#">1</a></li>
                                 <li><a href="#">2</a></li>
                                 <li><a href="#">3</a></li>
                                 <li><a href="#">4</a></li>
@@ -371,8 +469,12 @@
                                 <li><a href="#">7</a></li>
                                 <li><a href="#">8</a></li>
                                 <li><a href="#">9</a></li>
-                                <li><a href="#">10</a></li>
+                                <li><a href="#">10</a></li> *@
 
+                                @for (int i = 1; i <=10; i++)
+                                {
+                                    <li><a href="#">@Convert.ToInt16(i)</a></li>
+                                }
                             </ul>
 
 
